setup/vpc.tf.template
{{ if .vpc_id }} {{ else }}
resource "aws_vpc" "vpc" {
    cidr_block = "${var.cidr_prefix}.0.0/16"
    instance_tenancy = "default"
    enable_dns_support = true
    enable_dns_hostnames = false
    tags {
        Name = "l0-${var.l0_prefix}-vpc"
    }
}
{{ end }}

# Subnets are designed to make maximal use of the arbitrarily chosen /16 (65535 IPs) of the
# CIDR block
# We split the /16 in to 4 /18s (16384)
resource "aws_subnet" "public_primary" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
  cidr_block = "{{ or .public_subnet_cidr_a "${var.cidr_prefix}.0.0/18" }}"
  availability_zone = "${var.region}a"
  tags {
      Name = "l0-${var.l0_prefix}-public-primary"
  }
}

resource "aws_subnet" "private_primary" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
  cidr_block = "{{ or .private_subnet_cidr_a "${var.cidr_prefix}.64.0/18" }}"
  availability_zone = "${var.region}a"
  tags {
      Name = "l0-${var.l0_prefix}-private-primary"
  }
}

resource "aws_subnet" "public_secondary" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
  cidr_block = "{{ or .public_subnet_cidr_b "${var.cidr_prefix}.128.0/18" }}"
  availability_zone = "${lookup(var.aws_secondary_az, var.region)}"
  tags {
      Name = "l0-${var.l0_prefix}-public-secondary"
  }
}

resource "aws_subnet" "private_secondary" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
  cidr_block = "{{ or .private_subnet_cidr_b "${var.cidr_prefix}.192.0/18" }}"
  availability_zone = "${lookup(var.aws_secondary_az, var.region)}"
  tags {
      Name = "l0-${var.l0_prefix}-private-secondary"
  }
}

{{ if .igw_id }} {{ else }}
resource "aws_internet_gateway" "gateway" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
}
{{ end }}

resource "aws_network_acl" "public" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
}

resource "aws_network_acl" "private" {
  vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
}

{{ if .public_route_table_id }} {{ else }}
resource "aws_route_table" "public" {
    vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "{{ or .igw_id "${aws_internet_gateway.gateway.id}" }}"
    }
}
{{ end }}

{{ if .private_route_table_id }} {{ else }}
resource "aws_route_table" "private" {
    vpc_id = "{{ or .vpc_id "${aws_vpc.vpc.id}" }}"
    route {
        cidr_block = "0.0.0.0/0"
        instance_id = "{{ or .nat_id "${aws_instance.nat.id}" }}"
    }
}
{{ end }}

resource "aws_route_table_association" "public_primary" {
    subnet_id = "${aws_subnet.public_primary.id}"
    route_table_id = "{{ or .public_route_table_id "${aws_route_table.public.id}" }}"
}

resource "aws_route_table_association" "private_primary" {
    subnet_id = "${aws_subnet.private_primary.id}"
    route_table_id = "{{ or .private_route_table_id "${aws_route_table.private.id}" }}"
}

resource "aws_route_table_association" "public_secondary" {
    subnet_id = "${aws_subnet.public_secondary.id}"
    route_table_id = "{{ or .public_route_table_id "${aws_route_table.public.id}" }}"
}

resource "aws_route_table_association" "private_secondary" {
    subnet_id = "${aws_subnet.private_secondary.id}"
    route_table_id = "{{ or .private_route_table_id "${aws_route_table.private.id}" }}"
}
